cambios random en el landing page

--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="./css/styles.css">
     <!-- BOOTSTRAP LOCAL -->
     <!-- <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- FONTWAESOME LOCAL -->
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/fontawesome.min.css">
+
+
 </head>
 
 <body>
@@ -21,15 +27,16 @@
         <div class="row">
             <div class="col-sm-12 my-4">
                 <a href="index.html mt-4">
-                    <img src="./img/logo.png" alt="logo" class="logo">
+                    <img src="./img/lamb-1388937_640.png" alt="logo" class="logo">
                 </a>
-                <h1 class="text-center display-3 text-uppercase font-weight-bold mt-4">Lixi la Fronfraino</h1>
+                <h1 class="text-center display-3 text-uppercase font-weight-bold mt-4">Lixi la Fronfraine espera un bebe
+                </h1>
             </div>
             <div class="col-sm-6">
                 <img src="./img/right-laptop.png" alt="laptop" class="img-fluid">
             </div>
             <div class="col-sm-6 text-center">
-                <p class="text-center text-description">Suscribite ingresando tu correo electrónico para que puedas estar al tanto de todas la novedades en el mundo gaming</p>
+                <p class="text-center text-description">Estamos a la espera de un gran acontecimiento, para mayor informacion, suscribite dejando tu correo aqui abajo y participa en el sorteo de una laptop gamer                         <<<<<<<</p>
                 <form action="index.html">
                     <input type="text" class="form-control text-center my-4" type="email" name="write your email"
                         placeholder="enter your email">
