cambio de titulo en el H1

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="index.html mt-4">
                     <img src="./img/logo.png" alt="logo" class="logo">
                 </a>
-                <h1 class="text-center display-3 text-uppercase font-weight-bold mt-4">Landing page</h1>
+                <h1 class="text-center display-3 text-uppercase font-weight-bold mt-4">Comming soon!</h1>
             </div>
             <div class="col-sm-6">
                 <img src="./img/right-laptop.png" alt="laptop" class="img-fluid">
